--- a/mayi/index.html
+++ b/mayi/index.html
@@ -24,12 +24,12 @@
         <div id="barchart"></div>
     </div>
 
-   <!--  <div id="line">
+    <div id="line">
     <h2>青年识字人口</h2>
         <p id="intro">青年识字率正在上升，但年轻妇女却落在后面。</p>
         <p class="source">数据来源：儿童基金会</p>
         <div id="linechart"></div>
-        </div> -->
+        </div>
 
     
 
@@ -83,7 +83,7 @@
 
      <script type="text/javascript" src="js/mapchart.js"></script>
    
-<!--      <script type="text/javascript" src="js/linechart.js"></script> -->
+     <script type="text/javascript" src="js/linechart.js"></script>
      
      <script type="text/javascript" src="js/barchart.js"></script>
 
